[package]
name = "sandbox"
version = "0.0.1"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"
repository = "https://github.com/AlexAegis/rs-sandbox"

[dependencies]
num-traits = "0.2.8"
cached = "0.9.0"
clap = "2.33.0"
async-std = "0.99.10"
tokio = "0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", features = ["compat"] }

[dev-dependencies]
criterion = "0.3.0"
clippy = "0.0.302"

[lib]
name = "sandbox"
bench = false
doc = true

[profile.bench]
lto = true

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3

[workspace]
members = [

]
