[package]
name = "sandbox"
version = "0.0.2"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"
repository = "https://github.com/AlexAegis/rs-sandbox"

[dependencies]
num = "0.4.0"
cached = "0.24.0"
clap = "2.33.0"
async-std = "1.0.0"
tokio = "1.9.0"

[dev-dependencies]
criterion = "0.3.0"
clippy = "0.0.302"

[lib]
name = "sandbox"
bench = false
doc = true

[profile.bench]
lto = true

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3

[workspace]
members = [
	"book/chapter_3",
	"crates/mandelbrot",
	"crates/mandelbrot_gfx",
]
