[package]
name = "book_chapter_3"
version = "0.0.1"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"
repository = "https://github.com/AlexAegis/rs-sandbox"

[dependencies]
num = "0.2.0"

[dev-dependencies]
criterion = "0.3.0"
float-cmp = "0.5.3"

[lib]
name = "book_chapter_3"
bench = true
doc = true

[[bench]]
name = "bench"
harness = false
