[package]
name = "dispatcher"
version = "1.0.0"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"
repository = "https://github.com/AlexAegis/rs-sandbox"

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
log = { version = "0.4" }
env_logger = "0.9.0"

[lib]
name = "dispatcher"
bench = true
doc = true

