[package]
name = "mandelbrot"
version = "0.0.1"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"
repository = "https://github.com/AlexAegis/rs-sandbox"

[dependencies]
num = "0.4.0"
image = "0.23.14"
clap = "2.33.3"
rayon = "1.5.1"

[dev-dependencies]
criterion = "0.3.0"

[lib]
name = "mandelbrot"
bench = true
doc = true

[[bench]]
name = "bench"
harness = false
