[package]
name = "mandelbrot_gfx"
version = "0.0.1"
authors = ["AlexAegis <alexaegis@gmail.com>"]
license = "mit"
edition = "2018"
repository = "https://github.com/AlexAegis/rs-sandbox"

[dependencies]
num = "0.4.0"
clap = "2.33.3"
rayon = "1.5.1"
wgpu = "0.9.0"
winit = "0.25.0"
tokio = { version = "1.10.0", features = ["full"] }
bytemuck = "1.7.2"

[dev-dependencies]
criterion = "0.3.0"

[lib]
name = "mandelbrot_gfx"
bench = true
doc = true
